adding loading page

--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
             <div id="map" class="center-cell"></div>
             </div>
         </div>
+        <div id="load" class="center"></div>
         </div>
         <script>
             function init() {
@@ -90,8 +91,9 @@
                     $("#map").hide();           
              }
         </script>
+        <script src="js/spin.js"></script>         
         <script src="js/main.js"></script>
-        <script src="js/spin.js"></script>        
+        <script src="js/main.js"></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaOzU7c_8RDreOb24Cugn1D9_gaWt0_To&callback=init" ></script>
     </body>
 </html>
