--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,9 @@
             <div id="map-estimator" class="row text-center">
                 <div>
                     <div class="col-sm-12 col-md-12 col-lg-12 lrg">
-                House Estimates
-                low {{house_estimate.low | currency:"$":0}} mid {{house_estimate.mid | currency:"$":0}} high {{house_estimate.high | currency:"$":0}}</div>
+                        House Estimates
+                        low {{house_estimate.low | currency:"$":0}} mid {{house_estimate.mid | currency:"$":0}} high {{house_estimate.high | currency:"$":0}}
+                    </div>
                 </div>
                 <div class=" center-block">
                     <div id="map" class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3"></div>
@@ -83,25 +84,17 @@
                 google.maps.event.addListener(autocomplete, 'places_changed', function(){
                         var place = autocomplete.getPlaces();
                         address = place[0].geometry.location;
-                        streetAddress = "";
-                        cityState = "";
-                        streetNumber = "";
-                        streetRoute = "";
-                        city = "";
-                        state = "";
-                        console.log(place[0].address_components[4].types[0]);
                         for (i = 0; i < place[0].address_components.length; i++){
                             if(place[0].address_components[i].types[0] == 'street_number')
-                                streetNumber = place[0].address_components[i].long_name;
+                                var streetNumber = place[0].address_components[i].long_name;
                             if(place[0].address_components[i].types[0] == 'route')
-                                streetRoute = place[0].address_components[i].long_name;
+                                var streetRoute = place[0].address_components[i].long_name;
                             if(place[0].address_components[i].types[0] == 'locality')
-                                city = place[0].address_components[i].long_name;
+                                var city = place[0].address_components[i].long_name;
                             if(place[0].address_components[i].types[0] == 'administrative_area_level_1')
-                                state = place[0].address_components[i].long_name;
-
+                                var state = place[0].address_components[i].long_name;
                         }           
-                        streetAddress = streetNumber + " "+ streetRoute;
+                        streetAddress = streetNumber + " " + streetRoute;
                         cityState = city + "," + state;
 
                 });
