--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
             <div ng-include="'views/mapView.html'"></div>
             <div ng-include="'views/noEstimateView.html'"></div>
             <div id="load" class="spinner"></div>
+            <div ng-include="'views/footerView.html'"></div>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>          
@@ -25,7 +26,7 @@
           }
         map = new google.maps.Map(document.getElementById("map"),myOptions);
             $("#map").hide();
-        autocomplete = new google.maps.places.SearchBox(document.getElementById("address"));
+        autocomplete = new google.maps.places.SearchBox(document.getElementById("address"), {type:'geocode'});
         google.maps.event.addListener(autocomplete, 'places_changed', function(){
                 var place = autocomplete.getPlaces();
                 address = place[0].geometry.location;
